style.css
/* FW-version: 1.0 */

@font-face {
    font-family: 'Roboto';
    src: url(/fonts/Roboto/Roboto-Regular.ttf) format('ttf');
}

@font-face {
    font-family: 'Oxygen';
    src: url(/fonts/Oxygen/Oxygen-Regular.ttf) format('ttf');
}

@font-face {
    font-family: 'Ubuntu Mono';
    src: url(/fonts/Ubuntu_Mono/UbuntuMono-Regular.ttf);
}

@font-face {
    font-family: 'Audiowide';
    src: url(/fonts/Audiowide/Audiowide-Regular.ttf);
}

body {
    font-family: "Oxygen", sans-serif;
    margin: 0;
    background-color: black;
}

xmp {
    font-family: inherit;
    font-size: inherit;
}

.custom-scrollbar::-webkit-scrollbar {
    width: 10px;
}

.custom-scrollbar::-webkit-scrollbar-track {
    background: #181818; /* Darker track color */
}

.custom-scrollbar::-webkit-scrollbar-thumb {
    background: #555; /* Darker thumb color */
    border-radius: 10px;
}

.custom-scrollbar::-webkit-scrollbar-thumb:hover {
    background: #777; /* Darker hover color */
}

.custom-scrollbar::-webkit-scrollbar-button {
    height: 8px;
    width: 16px; 
    background-color: #555;
    border-radius: 4px;
  }

.custom-scrollbar::-webkit-scrollbar-button:hover {
    background-color: #777;
}

hr {
    border: 1px solid darkgrey;
}

.code {
    font-family: "Ubuntu Mono", monospace;
    background-color: lightgrey;
    border-radius: 10px;
    padding: 10px;
}

.code-title {
    font-weight: bold;
}

.code-content {
    white-space: pre-wrap;
}

.left-rail {
    height: 100%;
    width: 200px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    padding: 10px;
    box-sizing: border-box;
}

.sidenav {
    height: 50%;
    background-color: #252525;
    overflow-x: hidden;
    overflow-wrap: break-word;
    border-radius: 10px;
    margin-bottom: 10px;
}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 16px;
    color: #bbbbbb;
    display: block;
}

.dropdown-btn:hover,
.sidenav a:hover {
    color: #f1f1f1;
}

.sidetitle {
    font-family: "Audiowide";
    font-weight: bold;
    font-size: 20px !important;
}

.pagenav {
    height: -webkit-calc(50% - 10px);
    background-color: #252525;
    overflow-x: hidden;
    overflow-wrap: break-word;
    border-radius: 10px;
}

.pagenav * {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 16px;
    color: #bbbbbb;
    display: block;
}

.dropdown-btn {
  background-color: inherit; /* Inherit color from sidenav */
  color: #bbbbbb;
  padding: 6px 8px 6px 16px;
  text-decoration: none;
  font-size: 16px;
  display: block;
  border: none;
  background: none;
  cursor: pointer;
}

.dropdown-container {
  display: none;
  background-color: #262626;
  padding-left: 8px;
}

.page {
    margin: 10px;
    margin-left: 200px;
    background-color: white;
    border-radius: 10px;
    padding: 10px;
}

.page-title {
    font-size: 35px;
    font-weight: bold;
    margin-bottom: 6px;
}

.page-subtitle {
    color: grey;
}

.pagenav-title {
    font-family: "Audiowide";
    font-weight: bold;
    font-size: 18px !important;
}
.pagenav-h1 {
    padding-left: 16px !important;
}
.pagenav-h2 {
    padding-left: 24px !important;
}
.pagenav-h3 {
    padding-left: 32px !important;
}
.pagenav-h4 {
    padding-left: 40px !important;
}
.pagenav-h5 {
    padding-left: 48px !important;
}
.pagenav-h6 {
    padding-left: 56px !important;
}

.pagenav-title:hover, 
.pagenav-h1:hover, 
.pagenav-h2:hover, 
.pagenav-h3:hover, 
.pagenav-h4:hover, 
.pagenav-h5:hover, 
.pagenav-h6:hover {
  color: #f1f1f1;
}

